# xoxoedu

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_tables.py  0002_course_structure.py  0003_enrollment_progress.py  0004_quizzes_assignments.py  0005_payments_certificates.py  0006_grading_announcements.py  0007_ai_infra.py  0008_quiz_feedback.py  0009_video_transcripts.py  0010_rag_lesson_chunks.py  0011_merge_user_profiles.py  0012_assistant_conversations.py  0013_discussion_posts.py  0014_discussion_social.py  0015_notification_core.py  0016_notification_deliveries.py  0017_batches.py  0018_live_sessions.py  0019_session_attendance.py  0020_domain_realignment.py  0021_subscription_billing.py  0022_drop_stripe_customer_unique.py  0023_rename_notification_prefs.py  0024_program_marketing_fields.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  middleware.py  mux.py  rbac.py  redis.py  responses.py  security.py  storage.py
backend/app/db/: base.py  session.py
backend/app/worker/: celery_app.py  email.py  maintenance.py  retry.py  task_status.py
backend/scripts/: create_admin.py  generate_rsa_keys.py  reset_db.py  seed_db.py  setup_env.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: conftest.py  test_admin_assessments.py  test_admin_billing.py  test_admin_users.py  test_ai_config.py  test_ai_quiz_feedback.py  test_analytics.py  test_announcements.py  test_assignments.py  test_assistant.py  test_attendance.py  test_auth_login.py  test_auth_logout.py  test_auth_oauth.py  test_auth_password_reset.py  (+23 more)
(+223 files in other folders)
